<resources>
    <string name="app_name">practice</string>
    <string name="first_name">First Name</string>
    <string name="required">required</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="phone">Phone</string>
    <string name="already_have_an_account"><u>Already have an Account</u></string>
    <string name="create_a_new_account"><u>Create A New Account</u></string>
    <string name="title_activity_app">AppActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>