<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="signUpViewModel"
            type="com.example.practice.viewmodel.SignupViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SignupActivity"
        android:background="@drawable/img_2"
        >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#E4FFFFFF"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:background="@drawable/img"
        >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7560A5"
            app:titleTextColor="@color/white"
            app:title="Registration Form"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/firstNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/first_name"
            android:layout_marginLeft="16sp"
            android:layout_marginTop="24sp"
            android:layout_marginRight="16sp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:error = "@{signUpViewModel.userError.firstNameErrorMessage}"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={signUpViewModel.firstName}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/firstNameField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/last_name"
            android:layout_marginLeft="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginRight="16sp"
            app:error = "@{signUpViewModel.userError.lastNameErrorMessage}"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={signUpViewModel.lastName}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lastNameLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/email"
            android:layout_marginLeft="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginRight="16sp"
            app:error = "@{signUpViewModel.userError.emailErrorMessage}"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={signUpViewModel.email}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/phone"
            android:layout_marginLeft="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginRight="16sp"
            app:error = "@{signUpViewModel.userError.phoneErrorMessage}"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10"
                android:text="@={signUpViewModel.phone}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/mobileLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/password"
            android:layout_marginLeft="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginRight="16sp"
            app:error = "@{signUpViewModel.userError.passwordErrorMessage}"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_security_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={signUpViewModel.password}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/confirm_password"
            android:layout_marginLeft="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginRight="16sp"
            app:error = "@{signUpViewModel.userError.confirmPasswordErrorMessage}"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_security_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={signUpViewModel.cPassword}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cPasswordLayout"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:layout_marginTop="22sp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:backgroundTint="@color/black"
            android:background="@drawable/button_states"
            android:onClick="@{() -> signUpViewModel.signupButton()}"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/submit"
            android:text="@string/already_have_an_account"
            android:layout_marginLeft="16sp"
            android:layout_marginTop="22sp"
            android:layout_marginRight="16sp"
            android:textSize="17sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:onClick="@{()->signUpViewModel.loginButton()}"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>