<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.example.practice.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:background="@drawable/img_2"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#E4FFFFFF"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:background="@drawable/img"
        >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:title="Login Form"
            android:background="#7560A5"
            app:titleTextColor="@color/white" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/email"
            android:layout_marginLeft="16sp"
            android:layout_marginTop="24sp"
            android:layout_marginRight="16sp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:error="@{loginViewModel.userError.emailErrorMessage}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={loginViewModel.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/password"
            android:layout_marginLeft="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginRight="16sp"
            app:error="@{loginViewModel.userError.passwordErrorMessage}"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_security_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={loginViewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:layout_marginTop="22sp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:backgroundTint="@color/black"
            android:background="@drawable/button_states"
            android:onClick="@{() -> loginViewModel.login()}"
            />
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submit"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#CCC7C7"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:text="@string/create_a_new_account"
            android:layout_marginLeft="16sp"
            android:layout_marginTop="22sp"
            android:layout_marginRight="16sp"
            android:textSize="17sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:onClick="@{()->loginViewModel.newAccount()}"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>